<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.health17.iwatch.OnBoardingActivity"
    android:theme="@style/MaterialTheme"
    >

    <com.google.android.material.button.MaterialButton
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:drawableEnd="@drawable/ic_baseline_skip_next_24"
        android:onClick="skip"
        android:padding="12dp"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.viewpager.widget.ViewPager

        android:id="@+id/vp_on_boarding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.viewpager.widget.ViewPager>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.button.MaterialButton
            android:onClick="skip"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            android:layout_margin="16dp"
            android:visibility="invisible"
            android:id="@+id/btn_get_started"
            android:background="@color/colorPrimaryDark"
            android:text="@string/get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

        <LinearLayout
            android:id="@+id/dots_layout"
            android:paddingBottom="24dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:text="@string/next"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:onClick="next"
            android:drawableEnd="@drawable/ic_baseline_fast_forward_24"
            android:background="#00000000"
            android:id="@+id/btn_next"
            android:paddingBottom="24dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>